#  Part of SkySQL Manager API
#
# This file is distributed as part of SkySQL Manager.  It is free
# software: you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation,
# version 2.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013 (c) SkySQL Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Wed Aug 1 2013 Massimo Siani <massimo.siani@skysql.com> - 1.5.1
- Fixed various bugs
- Use API
- Keep looking for nodes if systems exist
- Added buffering
- Added support for batch execution
- Json parsing & Gson interface added
- Code cleanup

* Wed May 22 2013 Timofey Turenko <timofey.turenko@skysql.com> - 1.4-2
- add sleep for 10 seconds before trying again to get systems

* Wed May 15 2013 Mark Riddoch <mark.riddoch@skysql.com> - 1.4-1
- Fix for clash with RestEasy and the AWS API.
- Updated CRM monitor and SetNodeState to use the new API

* Wed May 01 2013 Mark Riddoch <mark.riddoch@skysql.com> - 1.4-0
- Use the SkySQL Management REST interface for adding monitor values
- There are three Java Properties that must now be set, SKYSQL_API_HOST,
- SKYSQL_API_KEY, SKYSQL_API_KEYID

* Wed Apr 17 2013 Mark Riddoch <mark.riddoch@skysql.com> - 1.3-1
- Addition of SQL_NODE_STATE monitor type
- Fix for a bug that caused delta monitors to go negative after a failure for the server to respond

* Wed Apr 03 2013 Timofey Turenko <timofey.turenko@skysql.com> - 0.1-2
- first packaged version